--- a/index.html
+++ b/index.html
@@ -1,20 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Trabalho Economia</title>
-    <link rel="icon" type="imagem/x-icon" href="green-economy.png">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="imagem/x-icon" href="Favicon.png">
+    <title>Trab Economia 2</title>
 </head>
 
-<Style></Style>
+<STYLE>
+    A {
+        text-decoration: none;
+    }
+</STYLE>
 
 <body>
-    <div class="navbar">
-        <a href="#MicroEconomia"><img src="Add a heading.png" alt="Logo"></a>
-    </div>
+    <header class="Cabecalho">
+        <nav class="Navbar">
+            <a class="Navbar-Item">Início</a>
+            <a class="Navbar-Item">Sobre nós</a>
+            <a class="Navbar-Item">Contúedo 1</a>
+            <a class="Navbar-Item">Conteúdo 2</a>
+        </nav>
+    </header>
+
+    <main class="Conteudos">
+        <section class="Conteudo_primario">
+            <div clas="Conteudo_primario_escrito">
+                <h1 >Lei da Oferta e Demanda: Entendendo os Fundamentos Econômicos</h1>
+                <p>
+                    Aqui você encontrará um guia completo e acessível para explorar os conceitos fundamentais da
+                        microeconomia e entender como as decisões individuais moldam a economia como um todo.
+                    
+                </p>
+                <p>
+                    Nossa missão é tornar a microeconomia compreensível e relevante para todos.Com uma
+                        abordagem simples e exemplos do cotidiano, eferecemos explicações detalhadas dos princípios
+                        econômicos básicoas,como oferta e demanda, elasticidade, custos de produção e mais.
+                </p>
+                <p>
+                    Este site foi desenvolvido de forma simplificada em HTML e CSS afim de demonstrar como é
+                        fácil aprender economia mesmo sem muitas tecnologias!
+                </p>
+                <p>
+                    Esperamos que gostem do site e dos conteúdos que foram estudados.
+                </p>
+            </div>
+        </section>
+        <h2 class="Alone">Sobre Nós</h2>
+        <section class="section">
+            <div class="item"><a href="#">Gabriel Roberto Cândido Nunes</a></div>
+            <div class="item"><a href="https://github.com/SamuellAguiar">Samuell Carlos de Oliveira Aguiar</a></div>
+            <div class="item"><a href="#">Yuri Lima Ribeiro</a></div>
+        </section>
+
+        <section>
+            <h2>Introdução à MicroEconomia</h2>
+            <p >
+                A introdução à microeconomia aborda conceitos fundamentais que fornecem uma base para o
+                    estudomais aprofundado dessa disciplina.  Um dos principais conceitos é o de escassez, que
+                    reconhece que os recursos produtivos são limitados em relação às necessidades e desejos ilimitados
+                    das pessoas.  A escassez é o que impulsiona a tomada de decisões econômicas.
+            </p>
+            </section>
+            <section>
+                <h2>O que é a Lei da Oferta</h2>
+            <p>
+                A lei da oferta é um conceito essencial na economia que explora a relação entre o preço de um produto e a quantidade que os vendedores estão dispostos a disponibilizar no mercado. De acordo com a lei da oferta:
+                <blockquote>"Um preço maior leva a uma quantidade ofertada maior, enquanto um preço menor resulta em uma quantidade ofertada menor."</blockquote>
+                Isso acontece porque os vendedores procuram maximizar seus lucros, ajustando a oferta de acordo com o preço.
+            </p>
+            <h2>Outros Fatores que Influenciam a Oferta</h2>
+            <p>Além do preço do produto, vários outros fatores impactam a oferta:</p>
+
+            <h3>Além do preço do produto, vários outros fatores impactam a oferta:</h3>
+            <p>Os custos associados à produção, como matérias-primas, salários e aluguéis, influenciam diretamente a oferta. Se esses custos aumentam, os produtores tendem a oferecer menos quantidade no mercado.</p>
+            <h3>Mudanças Tecnológicas</h3>
+            <p>Avanços tecnológicos podem reduzir custos e aumentar a produtividade das empresas. Isso leva a uma maior oferta, já que as empresas conseguem produzir mais eficientemente.</p>
+            <hr>
+        </section>
+
+        <section>
+            <h2>Compreendendo a Lei da Demanda</h2>
+            <p>A lei da demanda é outro pilar econômico que descreve a relação entre o preço de um produto e a quantidade que os consumidores estão dispostos a comprar. Segundo a lei da demanda:</p>
+            <blockquote class="">"Um preço menor leva a uma quantidade demandada maior, enquanto um preço maior resulta em uma quantidade demandada menor."</blockquote>
+            <p>Isso ocorre porque os consumidores buscam maximizar sua utilidade, optando por comprar mais quando os preços são baixos.</p>
+
+            <h2>Fatores que Impactam a Demanda</h2>
+            <p>Além do preço, outros fatores influenciam a demanda:</p>
+
+            <h3>Preço de Outros Bens</h3>
+            <p>O preço de produtos substitutos ou complementares pode afetar a demanda de um produto específico. Essa relação é crucial para entender os padrões de compra dos consumidores.</p>
+            
+            <h3>Renda do Consumidor</h3>
+            <p>A renda dos consumidores desempenha um papel importante na demanda. Produtos normais têm maior demanda à medida que a renda aumenta, enquanto bens inferiores têm sua demanda reduzida com o aumento da renda.</p>
+            <hr>
+        </section>
+
+        <section>
+            <h2>Lei da Oferta e Demanda em Ação</h2>
+            <h3>O Conceito Fundamental</h3>
+            <p>A Lei da Oferta e Demanda, também conhecida como Lei da Oferta e Procura, é uma pedra angular da economia clássica, introduzida por Adam Smith. Essa lei explora como os mercados funcionam, determinando preços e quantidades de produtos.</p>
+            <h3>Ponto de Equilíbrio</h3>
+            <p>Quando as curvas de oferta e demanda se cruzam, encontramos o ponto de equilíbrio. Nesse ponto, compradores estão dispostos a adquirir exatamente o que as empresas desejam vender a um preço específico.
+
+                No preço de equilíbrio, a quantidade que vendedores e consumidores estão dispostos a negociar é a mesma, criando um equilíbrio entre oferta e demanda.</p>
+        </section>
+    </main>
 </body>
 
 </html>
