--- a/Código/index.html
+++ b/Código/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="imagem/x-icon" href="/Trab-Economia/Utilizáveis/green-economy.png">
+    <link rel="icon" type="imagem/x-icon" href="/Utilizáveis/green-economy.png">
     <title>Trabalho ENP150</title>
 </head>
 
@@ -19,7 +19,7 @@
 <body id="inic">
     <header class="Cabecalho">
         <nav class="Navbar">
-            <a href="#inic"><img src="/Trab-Economia/Utilizáveis/Logo.png" alt="Logo" class="Logo"></a>
+            <a href="#inic"><img src="/Utilizáveis/Logo.png" alt="Logo" class="Logo"></a>
             <div class="Navbar-Itens">
                 <a class="Navbar-Item" href="#01">Início</a>
                 <a class="Navbar-Item" href="#02">Sobre nós</a>
