--- a/Código/index.html
+++ b/Código/index.html
@@ -21,7 +21,6 @@
         <nav class="Navbar">
             <a href="#inic"><img src="/Utilizáveis/Logo.png" alt="Logo" class="Logo"></a>
             <div class="Navbar-Itens">
-                <a class="Navbar-Item" href="#01">Início</a>
                 <a class="Navbar-Item" href="#02">Sobre nós</a>
                 <a class="Navbar-Item" href="#03">Introdução</a>
                 <a class="Navbar-Item" href="#04">Oferta</a>
@@ -99,6 +98,12 @@
             <h3>Expectativas</h3>
             <p>A quantidade de sorvete de casquinha que uma empresa oferece hoje pode depender de suas expectativas quanto ao futuro. Se, por exemplo, uma empresa tiver a expectativa de que o preço do sorvete aumente no futuro, ela estocará parte de sua produção atual e ofertará menos hoje. </p>
 
+            <p>Na <a href="#fig1">Figura 1, temos um caso exemplo da lei de oferta. </a>No caso, temos Ben, um vendedor de sorvete e é mostrado a quantidade ofertada a cada preço.
+            <img src="" alt="Exemplo-01" id="fig1"></p>
+            <p>A qualquer preço abaixo de $1,00, Ben não oferece nenhuma quantidade de sorvete. Á medida que o preço aumenta, ele oferece uma quantidade cada vez maior. Essa é a <strong>escala de oferta</strong>, uma tabela que mostra a relação entre o preço e a quantidade ofertada de um bem, mantendo-se constantes todas as demais coisas que influenciam o quanto os produtores do bem desejam vendê-lo.</p>
+            <img src="" alt="Gráfico do Exemplo-01" id="#Graf1">
+            <p>O <a href="#Graf1">gráfico</a> da <a href="#fig1">Figura 1</a> usa os dados da tabela para ilustrar a lei da oferta. A curva que relaciona o preço com a quantidade ofertada é chamada <strong>curva de oferta.</strong> A curva de oferta se inclina para cima porque, com tudo mantido constante, um preço maios significa uma quantidade ofertada maior.</p>
+            <p>A oferta se refere à intenção do empresário em disponibilizar no mercado certa quantidade de mercadoria em um determinado período de tempo. O tempo influencia o nível da oferta, pois há épocas em que é mais vantajoso aumentar a disponibilidade do produto no mercado. Como exemplo, no dia das crianças, a oferta de brinquedos é mais vantajosa, pois há uma maior demanda por esses produtos, bem como um maio poder de barganha do empresário em relação ao aumento dos preços no mercado.</p>
             <hr>
         </section>
 
@@ -139,7 +144,7 @@
             <h3>Variação de Preço e Quantidade</h3>
             <p>A curva de demanda mostra como a quantidade demandada varia em resposta a mudanças nos preços. No entanto, fatores além do preço, como a renda dos consumidores, os preços de bens relacionados (substitutos e complementos), gostos e preferências, também podem afetar a demanda e, consequentemente, deslocar a curva de demanda.</p>
             
-            <h3>Deslocamento da Curva de Demanda</h3>
+            <h3>Deslocamento da Curva de Demanda:</h3>
             <p>A curva de demanda pode se deslocar para a direita (aumento da demanda) ou para a esquerda (diminuição da demanda) devido a mudanças em fatores que não são o próprio preço do bem. Alguns exemplos incluem:</p>            
             
             <h3>Renda</h3>
