--- a/Código/index.html
+++ b/Código/index.html
@@ -55,9 +55,9 @@
         <hr>
         <h2 class="Alone" id="02">Sobre Nós</h2>
         <section class="section">
-            <div class="item"><a href="#">Gabriel Roberto Cândido Nunes</a></div>
+            <div class="item"><a href="https://github.com/BielCandido">Gabriel Roberto Cândido Nunes</a></div>
             <div class="item"><a href="https://github.com/SamuellAguiar">Samuell Carlos de Oliveira Aguiar</a></div>
-            <div class="item"><a href="#">Yuri Lima Ribeiro</a></div>
+            <div class="item"><a href="https://github.com/YuriLRibeiro">Yuri Lima Ribeiro</a></div>
         </section>
         <hr>
 
