--- a/Código/index.html
+++ b/Código/index.html
@@ -58,8 +58,13 @@
             <div class="item"><a href="https://github.com/BielCandido">Gabriel Roberto Cândido Nunes</a></div>
             <div class="item"><a href="https://github.com/SamuellAguiar">Samuell Carlos de Oliveira Aguiar</a></div>
             <div class="item"><a href="https://github.com/YuriLRibeiro">Yuri Lima Ribeiro</a></div>
+
+
         </section>
         <hr>
+
+
+
 
         <section>
             <h2 id="03">Introdução à MicroEconomia</h2>
@@ -77,6 +82,7 @@
             </p>
         </section>
         <hr>
+
         <section>
             <h2 id="04">O que é a Lei da Oferta</h2>
             <p>
@@ -85,7 +91,8 @@
                 A quantidade ofertada de qualquer bem ou serviço é a quantidade que os vendedores querem e podem vender.
                 De acordo com a lei da
                 oferta:
-                <a href="">
+                <a
+                    href="https://d1wqtxts1xzle7.cloudfront.net/58733279/Microeconomia_Apostila_Oferta_e_Demanda20190328-7684-1oytzrx-libre.pdf?1553798919=&response-content-disposition=inline%3B+filename%3DMICROECONOMIA_GL202_OFERTA_E_DEMANDA.pdf&Expires=1692123425&Signature=XkfrL3KCx12PrOUINiYAU4Dm0FFMHt6AYnyd6BOmj6mYErguxL20rh7AONfuWuhf-SEkih7zfq5pt4fJ7C9690n5h50i5h~7EKPZv~foq8fkgJLuWQ~rYtPBViaFUJzR7Xu0IoOdHahHg8OEJaGOwqdOrIqsq57NqTdbBaqjaEz5hFTqmuxNC~gEDu2YMCIM5MfcrCCwcGpwNyPR7~ZtYkNCF3SC6SpkDBA8t-ZPAO99Kr79SVKTD19cN~a0TlmDbAUn4Hh1jH0~VlRIj89WVgUgR~94~7B7cWmwNRpH2VMsFyKRoFNqtvVMNFOw1y4jRg-yocQ-Jzba6k4ybROvaQ__&Key-Pair-Id=APKAJLOHF5GGSLRBV4ZA">
                     <blockquote>"Um preço maior leva a uma quantidade ofertada maior, enquanto um preço menor resulta em
                         uma
                         quantidade ofertada menor."</blockquote>
@@ -132,11 +139,12 @@
                 aumenta, ele oferece uma quantidade cada vez maior. Essa é a <strong>escala de oferta</strong>, uma
                 tabela que mostra a relação entre o preço e a quantidade ofertada de um bem, mantendo-se constantes
                 todas as demais coisas que influenciam o quanto os produtores do bem desejam vendê-lo.</p>
-            <img src="" alt="Gráfico do Exemplo-01" id="#GrafOferta" class="centro">
+            <img src="/Utilizáveis/Grafico1.jpg" alt="Gráfico do Exemplo-01" id="#GrafOferta" class="centro">
             <p>O <a href="#GrafOferta">gráfico</a> da <a href="#figOferta">Figura 1</a> usa os dados da tabela para
                 ilustrar a lei da oferta. A curva que relaciona o preço com a quantidade ofertada é chamada
                 <strong>curva de oferta.</strong> A curva de oferta se inclina para cima porque, com tudo mantido
-                constante, um preço maios significa uma quantidade ofertada maior.</p>
+                constante, um preço maios significa uma quantidade ofertada maior.
+            </p>
             <p>A oferta se refere à intenção do empresário em disponibilizar no mercado certa quantidade de mercadoria
                 em um determinado período de tempo. O tempo influencia o nível da oferta, pois há épocas em que é mais
                 vantajoso aumentar a disponibilidade do produto no mercado. Como exemplo, no dia das crianças, a oferta
@@ -155,14 +163,14 @@
                 para a direita e é denominada aumento da oferta. Da mesma forma, qualquer mudança que reduza a
                 quantidade ofertada a cada preço desloca a curva de oferta para a esqueda e é denominada redução da
                 oferta.</p>
-            <p><img src="#" alt="Figura 04" id="FigDeslOferta" class="centro"></p>
+            <p><img src="/Utilizáveis/deslocamento1.jpg" alt="Figura 04" id="FigDeslOferta" class="centro"></p>
 
             <p><strong>Se desejar saber mais, clique abaixo:</strong> </p>
-            <button class="button">Veja Mais</button>
+            <a href="https://integrada.minhabiblioteca.com.br/reader/books/9788522127924/pageid/88"><button
+                    class="button">Veja Mais</button></a>
 
-            <hr>
         </section>
-
+        <hr>
         <section>
             <h2 id="05">Compreendendo a Lei da Demanda</h2>
             <p>A lei da demanda é outro pilar econômico que descreve a relação entre o preço de um produto e a
@@ -171,7 +179,8 @@
                 que são ofertados pelos produtores influenciam diretamente o desejo de consumir, ou seja, quanto maior
                 for o preço do bem, menor será a quantidade que o consumidor deseja adquirir.
                 Segundo a lei da demanda:</p>
-            <a href="#">
+            <a
+                href="https://books.google.com.br/books?hl=pt-BR&lr=&id=JHCwDwAAQBAJ&oi=fnd&pg=PT5&dq=lei+da+oferta&ots=jGn0B65j-w&sig=b89nvksgpwJxejLwoNAeL2r-9QQ&redir_esc=y#v=onepage&q&f=false">
                 <blockquote>"Um preço menor leva a uma quantidade demandada maior, enquanto um preço maior resulta em
                     uma
                     quantidade demandada menor."</blockquote>
@@ -214,7 +223,7 @@
                 (substitutos e complementos), gostos e preferências, também podem afetar a demanda e, consequentemente,
                 deslocar a curva de demanda.</p>
 
-            <p><img src="#" alt="Curva de Demanda" id="FigDemanda" class="centro"></p>
+            <p><img src="/Utilizáveis/Figura2.jpg" alt="Curva de Demanda" id="FigDemanda" class="centro"></p>
             <p>A <a href="FigDemanda">Figura 03</a> mostra quantos sorvetes de casquinha Catarina compra por mês, a
                 diferentes preços. À medida que o preço aumentar, ela comprará cada vez menos sorvete de casquinha.
                 Quando o preço atingir $3,00, Catarina não comprará nenhum sorvete. Essa escala é chamada <strong>escala
@@ -222,7 +231,8 @@
                 constantes todasa as demais coisas que influenciam a quantidade do bem que os consumidores deseja
                 comprar.</p>
 
-            <p><img src="#" alt="Gráfico da Curva de Demanda" id="GrafCurvaDemanda" class="centro"></p>
+            <p><img src="/Utilizáveis/Grafico2.jpg" alt="Gráfico da Curva de Demanda" id="GrafCurvaDemanda"
+                    class="centro"></p>
             <p>O <a href="GrafCurvaDemanda">gráfico</a> da <a href="FigDemanda">Figura 03</a> usa os números da tabela
                 para ilustrar a lei da demanda.</p>
             <p>Por convenção, o preço do sorvete é representado no eixo vertical, e a quantidade demandada, no eixo
@@ -253,7 +263,8 @@
             <p>Mudanças nas preferências dos consumidores podem levar a aumentos ou diminuições na demanda por um bem,
                 causando um deslocamento da curva de demanda.</p>
 
-            <p><img src="#" alt="Figura Deslocamento da curva de Demanda" id="FigDeslDemanda" class="centro"></p>
+            <p><img src="/Utilizáveis/deslocamento2.jpg" alt="Figura Deslocamento da curva de Demanda"
+                    id="FigDeslDemanda" class="centro"></p>
             <p>Como a curva de de mercado mantém constantes os muitos outros fatores, ela não precisa ser estável ao
                 longo do tempo. Se acontecer algo que altere a quantidade demandada a cada preço dado, a curva de
                 demanda se deslocará.</p>
@@ -265,10 +276,11 @@
                 compre um compre ou tome um táxi. É mais provável que ande de ônibus.</p>
 
             <p><strong>Se desejar saber mais, clique abaixo:</strong> </p>
-            <button class="button">Veja Mais</button>
-            <hr>
-        </section>
+            <a href="https://integrada.minhabiblioteca.com.br/reader/books/9788595022478/pageid/89"><button
+                    class="button">Veja Mais</button></a>
 
+        </section>
+        <hr>
         <section>
             <h2 id="06">Equilíbrio</h2>
             <h3>O Conceito Fundamental</h3>
@@ -284,7 +296,37 @@
                 criando um equilíbrio entre oferta e demanda.</p>
 
             <p><strong>Se desejar saber mais, clique abaixo:</strong> </p>
-            <button class="button">Veja Mais</button>
+            <a href="https://integrada.minhabiblioteca.com.br/reader/books/9788595022478/pageid/89 "><button
+                    class="button">Veja Mais</button></a>
+
+        </section>
+        <hr>
+
+        <section>
+            <footer>
+                <h2>Referencias</h2>
+                <p>O conteúdo do presente site foi baseado nas seguintes referências:</p>
+                <ul>
+                    <a href=" https://integrada.minhabiblioteca.com.br/#/books/9788522127924/">
+                        <li>MANKIW, N G. Introdução à economia – Tradução da 8ª edição norte-americana. Cengage Learning
+                            Brasil, 2019. E-book. ISBN 9788522127924.</li>
+                    </a>
+                    <a href=" https://integrada.minhabiblioteca.com.br/#/books/9788595022478/">
+                        <li>SILVA, Daniele F.; AZEVEDO, Iraneide S S. Economia. Grupo A, 2017. E-book. ISBN
+                            9788595022478.</li>
+                    </a>
+                    <a
+                        href=" https://d1wqtxts1xzle7.cloudfront.net/58733279/Microeconomia_Apostila_Oferta_e_Demanda20190328-7684-1oytzrx-libre.pdf?1553798919=&response-content-disposition=inline%3B+filename%3DMICROECONOMIA_GL202_OFERTA_E_DEMANDA.pdf&Expires=1692123425&Signature=XkfrL3KCx12PrOUINiYAU4Dm0FFMHt6AYnyd6BOmj6mYErguxL20rh7AONfuWuhf-SEkih7zfq5pt4fJ7C9690n5h50i5h~7EKPZv~foq8fkgJLuWQ~rYtPBViaFUJzR7Xu0IoOdHahHg8OEJaGOwqdOrIqsq57NqTdbBaqjaEz5hFTqmuxNC~gEDu2YMCIM5MfcrCCwcGpwNyPR7~ZtYkNCF3SC6SpkDBA8t-ZPAO99Kr79SVKTD19cN~a0TlmDbAUn4Hh1jH0~VlRIj89WVgUgR~94~7B7cWmwNRpH2VMsFyKRoFNqtvVMNFOw1y4jRg-yocQ-Jzba6k4ybROvaQ__&Key-Pair-Id=APKAJLOHF5GGSLRBV4ZA">
+                        <li>Etulain, Carlos R. "Oferta e demanda." Apostila Microeconomia-Universidade Estadual de
+                            Campinas. Limeira (2019).</li>
+                    </a>
+                    <a
+                        href=" https://books.google.com.br/books?hl=pt-BR&lr=&id=JHCwDwAAQBAJ&oi=fnd&pg=PT5&dq=lei+da+oferta&ots=jGn0B73o-p&sig=6jzjrgieMPQoAGsILytvPOjpC4o&redir_esc=y#v=onepage&q=lei%20da%20oferta&f=false">
+                        <li>de Vasconcellos, Marco Antonio Sandoval, and Manuel Enriquez Garcia. Fundamentos de
+                            economia. Saraiva Educação SA, 2002.</li>
+                    </a>
+                </ul>
+            </footer>
         </section>
     </main>
 </body>
