--- a/Código/index.html
+++ b/Código/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="imagem/x-icon" href="/Utilizáveis/green-economy.png">
+    <link rel="icon" type="imagem/x-icon" href="/Utilizáveis/green-economy.jpg">
     <title>Trabalho ENP150</title>
 </head>
 
