--- a/Código/index.html
+++ b/Código/index.html
@@ -96,7 +96,7 @@
 
         <section>
             <h2 id="03">
-                Introdução à Microconomia
+                Introdução à Microeconomia
             </h2>
 
             <p>
