--- a/Código/index.html
+++ b/Código/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="imagem/x-icon" href="/Utilizáveis/green-economy.jpg">
+    <link rel="icon" type="imagem/x-icon" href="green-economy.jpg">
     <title>Trabalho ENP150</title>
 </head>
 
@@ -22,7 +22,7 @@
 
         <nav class="Navbar">
 
-            <a href="#inic"><img src="/Utilizáveis/Logo.png" alt="Logo" class="Logo"></a>
+            <a href="#inic"><img src="Logo.png" alt="Logo" class="Logo"></a>
 
             <div class="Navbar-Itens">
 
@@ -213,7 +213,7 @@
                 as demais coisas que influenciam o quanto os produtores do bem desejam vendê-lo.
             </p>
 
-            <img src="/Utilizáveis/Grafico1.jpg" alt="Gráfico do Exemplo-01" id="#GrafOferta" class="centro">
+            <img src="Grafico1.jpg" alt="Gráfico do Exemplo-01" id="#GrafOferta" class="centro">
 
             <p>
                 O <a href="#GrafOferta">gráfico</a> da <a href="#figOferta">Figura 1</a> usa os dados da tabela para
@@ -252,7 +252,7 @@
             </p>
 
             <p>
-                <img src="/Utilizáveis/deslocamento1.jpg" alt="Figura 04" id="FigDeslOferta" class="centro">
+                <img src="deslocamento1.jpg" alt="Figura 04" id="FigDeslOferta" class="centro">
             </p>
 
             <p>
@@ -362,7 +362,7 @@
             </p>
 
             <p>
-                <img src="/Utilizáveis/Figura2.jpg" alt="Curva de Demanda" id="FigDemanda" class="centro">
+                <img src="Figura2.jpg" alt="Curva de Demanda" id="FigDemanda" class="centro">
             </p>
 
             <p>
@@ -375,7 +375,7 @@
             </p>
 
             <p>
-                <img src="/Utilizáveis/Grafico2.jpg" alt="Gráfico da Curva de Demanda" id="GrafCurvaDemanda"
+                <img src="Grafico2.jpg" alt="Gráfico da Curva de Demanda" id="GrafCurvaDemanda"
                     class="centro">
             </p>
 
@@ -440,7 +440,7 @@
             </p>
 
             <p>
-                <img src="/Utilizáveis/deslocamento2.jpg" alt="Figura Deslocamento da curva de Demanda"
+                <img src="deslocamento2.jpg" alt="Figura Deslocamento da curva de Demanda"
                     id="FigDeslDemanda" class="centro">
             </p>
 
@@ -495,7 +495,7 @@
             </p>
 
             <p>
-                <img src="/Utilizáveis/Equilibrio-ponto.jpg" alt="Ponto de Equilíbrio" id="FigEq">
+                <img src="Equilibrio-ponto.jpg" alt="Ponto de Equilíbrio" id="FigEq">
             </p>
 
             <p>
@@ -524,7 +524,7 @@
             </p>
 
             <p>
-                <img src="/Utilizáveis/Equilibrio-ponto-ex.jpg" alt="Ponto de Equilíbrio exemplo" id="ExEq">
+                <img src="Equilibrio-ponto-ex.jpg" alt="Ponto de Equilíbrio exemplo" id="ExEq">
             </p>
 
             <h3>Como um aumento da demanda afeta o equilíbrio</h3>
@@ -542,7 +542,7 @@
             </p>
 
             <p>
-                <img src="/Utilizáveis/deslocamento3.jpg" alt="Deslocamento do ponto de equilíbrio" id="DesEq">
+                <img src="deslocamento3.jpg" alt="Deslocamento do ponto de equilíbrio" id="DesEq">
             </p>
 
             <h3>
@@ -563,7 +563,7 @@
             </p>
 
             <p>
-                <img src="/Utilizáveis/deslocamento4.jpg" alt="Deslocamento do ponto de equilíbrio 2" id="DesEq2">
+                <img src="deslocamento4.jpg" alt="Deslocamento do ponto de equilíbrio 2" id="DesEq2">
             </p>
 
             <p>
@@ -573,7 +573,7 @@
             </p>
 
             <p>
-                <img src="/Utilizáveis/tabela.jpg" alt="Tabela de deslocamento" id="table">
+                <img src="tabela.jpg" alt="Tabela de deslocamento" id="table">
             </p>
 
             <p>
